--- a/erp/erp-basic.ipynb
+++ b/erp/erp-basic.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "406c8427-a313-4ea1-bd4f-7abaaf54b062",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install mne"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 103,
    "id": "85536d89-5144-4eb2-887b-e9910d870d97",
    "metadata": {},
